FIX: стриминг E2E, async-архитектура, regression-тесты